--- a/spotify_frontend/public/index.html
+++ b/spotify_frontend/public/index.html
@@ -14,6 +14,11 @@
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
+    <script
+    src="https://widget.cloudinary.com/v2.0/global/all.js"
+    type="text/javascript"
+></script>
+
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
